--- a/apps/frontend/src/app/shared/template/header/header.component.html
+++ b/apps/frontend/src/app/shared/template/header/header.component.html
@@ -1,13 +1,13 @@
 <div class="header">
     <div class="logo logo-dark">
         <a href="">
-            <img src="assets/images/logo/logo.png" alt="Logo">
-            <img class="logo-fold" src="assets/images/logo/logo-fold.png" alt="Logo">
+            <img src="assets/images/logo/logo.svg" alt="Logo">
+            <img class="logo-fold" src="assets/images/logo/logo-fold.svg" alt="Logo">
         </a>
     </div>
     <div class="logo logo-white">
         <a href="">
-            <img src="assets/images/logo/logo-white.png" alt="Logo">
+            <img src="assets/images/logo/logo-white.svg" alt="Logo">
             <img class="logo-fold" src="assets/images/logo/logo-fold-white.png" alt="Logo">
         </a>
     </div>
@@ -43,4 +43,4 @@
             </li>
         </ul>
     </div>
-</div>    
+</div>
